<resources>
    <string name="app_name">FoodApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="FirstNameText">First Name :</string>
    <string name="FirstNameTextField">Enter First Name</string>
    <string name="SecondNameTextField">Enter Second Name</string>
    <string name="LastNameText">Last Name :</string>
    <string name="EmailText">Email :</string>
    <string name="UserMailId">Enter Email</string>
    <string name="submitButton">Register</string>
    <string name="List_of_Users_text">List Of Registered Users</string>
    <string name="PasswordText">Password:</string>
    <string name="PasswordTextFiels">Enter Password</string>
    <string name="UserNameTextView">User Name:</string>
    <string name="UsernameTextField">Enter User Name</string>
    <string name="backButton">Back</string>
    <string name="Login_button">Login</string>
    <string name="signupText">Sign Up!</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="loginn">Login</string>
    <string name="enter_your_password_here">Enter Your Password Here</string>
    <string name="enter_your_email_here">Enter Your Email Here</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="enter_your_last_name_here">Enter Your Last Name Here</string>
    <string name="your_first_name">Your First Name</string>
    <string name="enter_your_first_name_here">Enter Your First Name Here</string>
    <string name="your_last_name">Your Last Name</string>
    <string name="emaill">Email</string>
    <string name="password">Password :</string>
    <string name="enter_your_email_herer">Enter Your Email Here</string>
    <string name="enter_strong_pass_here">Enter Strong Pass Here</string>
    <string name="appinfo">This project aims to develop a comprehensive recipe application designed to offer a seamless user experience through a variety of features. The app will include multiple fragments such as SplashFragment, LoginFragment, and RecipeDetailFragment, each with custom XML layouts to ensure an intuitive interface. Users can explore recipes in the HomeFragment, manage their favorites in the FavoriteFragment, and search for specific dishes in the SearchFragment. Additional functionalities include a video player for recipe videos, secure user authentication, and a local SQLite database to store favorite recipes. The application will leverage a navigation library for smooth fragment transitions and provide a robust option menu and about section to enhance user engagement and provide essential app information.</string>
    <string name="sign_out">sign_out</string>
</resources>